tools/flowc/tests/errors/error15.flow
import string;

// Test on detection of name conflict of a local variable in switch and a global variable

x = 4;

fun1() -> int {
	s = Some(5);
	switch (s) {
		Some(x): x;
		None(): 0;
	}
}
